DGCW-64 Change Button to EMA Modal

--- a/index.html
+++ b/index.html
@@ -12812,13 +12812,13 @@
                 </div></a
               ><a
                 style="width: inherit"
-                href='javascript:triggerCustomEvent("c94c6f5b-e23a-44fa-94f6-759bf4ad676d", "{}")'
                 target="_self"
                 ><div
                   id="vbid-df98af45-fb42a2df"
                   class="element button_preset_1"
                   data-elementtype="BUTTON2"
                   data-variant="button_variant_8"
+                  onclick="openModal()"
                 >
                   Book Online
                 </div></a
@@ -14869,13 +14869,13 @@
                   <div class="buttons">
                     <a
                       style="width: inherit"
-                      href='javascript:triggerCustomEvent("c94c6f5b-e23a-44fa-94f6-759bf4ad676d", "{}")'
                       target="_self"
                       ><div
                         id="vbid-116e2b55-549d5a50"
                         class="element button_preset_2"
                         data-elementtype="BUTTON"
                         data-variant="button_variant_8"
+                        onclick="openModal()"
                       >
                         book now
                       </div></a
@@ -16361,7 +16361,6 @@
                     <div class="buttons">
                       <a
                         style="width: inherit"
-                        href='javascript:triggerCustomEvent("c94c6f5b-e23a-44fa-94f6-759bf4ad676d", "{}")'
                         target="_self"
                         ><div
                           id="vbid-cadee629-7ad8-4f9c-a838-d5e0c1b2d364-dyn_elem_BUTTON_0s2"
@@ -16369,6 +16368,7 @@
                           class="element button_preset_1"
                           data-elementtype="BUTTON2"
                           data-variant="button_variant_8"
+                          onclick="openModal()"
                         >
                           Book Online
                         </div></a
@@ -16557,7 +16557,6 @@
                     <div class="buttons">
                       <a
                         style="width: inherit"
-                        href='javascript:triggerCustomEvent("c94c6f5b-e23a-44fa-94f6-759bf4ad676d", "{}")'
                         target="_self"
                         ><div
                           id="vbid-cadee629-7ad8-4f9c-a838-d5e0c1b2d364-dyn_elem_BUTTON_1s2"
@@ -16565,6 +16564,7 @@
                           class="element button_preset_1"
                           data-elementtype="BUTTON2"
                           data-variant="button_variant_8"
+                          onclick="openModal()"
                         >
                           Book Online
                         </div></a
