Fixed Broken Images and Google Maps

--- a/content/financing-options.html
+++ b/content/financing-options.html
@@ -311,7 +311,7 @@
 
     <meta name="theme-color" content="#000000" />
     <link rel="canonical" href="financing-options.html" />
-    <link rel="shortcut icon" href="assets/favicon.ico" />
+    <link rel="shortcut icon" href="../assets/favicon.ico" />
     <link rel="preconnect" href="https://www.googletagmanager.com" />
     <link rel="preconnect" href="https://sa1s3optim.patientpop.com" />
     <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
@@ -9388,9 +9388,9 @@
                   alt="logo"
                   data-elementtype="ICON"
                   class="lazyload icon element"
-                  src="assets/50x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png"
+                  src="../assets/50x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png"
                   data-sizes="auto"
-                  data-src="assets/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png"
+                  data-src="../assets/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png"
                   data-srcset="https://sa1s3optim.patientpop.com/640x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png 640w, https://sa1s3optim.patientpop.com/768x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png 768w, https://sa1s3optim.patientpop.com/1024x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png 1024w, https://sa1s3optim.patientpop.com/1280x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png 1280w, https://sa1s3optim.patientpop.com/1536x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png 1536w"
               /></a>
               <div class="logotype">
@@ -10199,14 +10199,14 @@
                           flexibility you need to prioritize your health without
                           the stress of immediate payments.<br /><br /><img
                             class="lazyload"
-                            src="assets/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png"
+                            src="../assets/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png"
                             alt="care credit"
                             width="272"
                             height="152"
                             loading="lazy"
                             data-sizes="auto"
-                            data-srcset="assets/640x/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png 640w, assets/768x/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png 768w, assets/1024x/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png 1024w, assets/1280x/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png 1280w, assets/1536x/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png 1536w"
-                            data-src="assets/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png" /><br
+                            data-srcset="../assets/640x/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png 640w, ../assets/768x/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png 768w, ../assets/1024x/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png 1024w, ../assets/1280x/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png 1280w, ../assets/1536x/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png 1536w"
+                            data-src="../assets/filters:format(webp)/assets/production/practices/30d8349b68c2dbec835b5b956b3668a7e44c9024/images/2753477.png" /><br
                         /></span>
                       </p>
                       <p>
@@ -10472,9 +10472,9 @@
                   alt="logo"
                   data-elementtype="ICON"
                   class="lazyload icon element"
-                  src="assets/50x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png"
+                  src="../assets/50x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png"
                   data-sizes="auto"
-                  data-src="assets/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png"
+                  data-src="../assets/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png"
                   data-srcset="https://sa1s3optim.patientpop.com/640x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png 640w, https://sa1s3optim.patientpop.com/768x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png 768w, https://sa1s3optim.patientpop.com/1024x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png 1024w, https://sa1s3optim.patientpop.com/1280x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png 1280w, https://sa1s3optim.patientpop.com/1536x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png 1536w"
                 />
                 <div class="logotype">
