--- a/content/photo-consult.html
+++ b/content/photo-consult.html
@@ -311,7 +311,7 @@
 
     <meta name="theme-color" content="#000000" />
     <link rel="canonical" href="photo-consult.html" />
-    <link rel="shortcut icon" href="assets/favicon.ico" />
+    <link rel="shortcut icon" href="../assets/favicon.ico" />
     <link rel="preconnect" href="https://www.googletagmanager.com" />
     <link rel="preconnect" href="https://sa1s3optim.patientpop.com" />
     <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
@@ -9389,9 +9389,9 @@
                   alt="logo"
                   data-elementtype="ICON"
                   class="lazyload icon element"
-                  src="assets/50x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png"
+                  src="../assets/50x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png"
                   data-sizes="auto"
-                  data-src="assets/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png"
+                  data-src="../assets/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png"
                   data-srcset="https://sa1s3optim.patientpop.com/640x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png 640w, https://sa1s3optim.patientpop.com/768x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png 768w, https://sa1s3optim.patientpop.com/1024x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png 1024w, https://sa1s3optim.patientpop.com/1280x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png 1280w, https://sa1s3optim.patientpop.com/1536x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1).png 1536w"
               /></a>
               <div class="logotype">
@@ -10452,9 +10452,9 @@
                   alt="logo"
                   data-elementtype="ICON"
                   class="lazyload icon element"
-                  src="assets/50x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png"
+                  src="../assets/50x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png"
                   data-sizes="auto"
-                  data-src="assets/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png"
+                  data-src="../assets/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png"
                   data-srcset="https://sa1s3optim.patientpop.com/640x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png 640w, https://sa1s3optim.patientpop.com/768x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png 768w, https://sa1s3optim.patientpop.com/1024x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png 1024w, https://sa1s3optim.patientpop.com/1280x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png 1280w, https://sa1s3optim.patientpop.com/1536x/filters:format(webp)/sc-assets/prd/practices/d7c1548e-0657-4aa2-97c7-8328ed019298/MG Thin Logo 3 (1)-1720816566138.png 1536w"
                 />
                 <div class="logotype">
